// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic 1`] = `
"
import unique from 'unique.macro'
      const uniqueClass = unique()

      ↓ ↓ ↓ ↓ ↓ ↓

const uniqueClass = 'css-1i4kx88';
"
`;

exports[`custom prefix 1`] = `
"
import unique from 'unique.macro'
      const uniqueSomething = unique('something-')

      ↓ ↓ ↓ ↓ ↓ ↓

const uniqueSomething = 'something-1ajrdri';
"
`;

exports[`unique.macro basic 1`] = `
"
const uniqueClass = 'css-1xp6fv5';"
`;

exports[`unique.macro custom prefix 1`] = `
"
const uniqueSomething = 'something-13atynq';"
`;

exports[`unique.macro with commonjs 1`] = `
"
const uniqueClass = 'css-12y3co1';"
`;

exports[`with commonjs 1`] = `
"
const unique = require('unique.macro')
      const uniqueClass = unique()

      ↓ ↓ ↓ ↓ ↓ ↓

const uniqueClass = 'css-n3g2au';
"
`;
